--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
         android:text="Show My Goals"
         android:layout_marginBottom="16dp"/>
 
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reset Goals"
+        android:layout_marginBottom="16dp"/>
+
     <TextView
         android:id="@+id/timerTextView"
         android:layout_width="match_parent"
